# lk

./: .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE.md  README.md  TODO.txt  lk.pro  lk_absyn.cpp  lk_absyn.h  lk_bessel.h  lk_codegen.cpp  lk_codegen.h  lk_env.cpp  lk_env.h  lk_eval.cpp  lk_eval.h  lk_invoke.cpp  lk_invoke.h  lk_lex.cpp  lk_lex.h  lk_math.cpp  lk_math.h  lk_parse.cpp  lk_parse.h  lk_pcgen.cpp  lk_pcgen.h  lk_stdlib.cpp  lk_stdlib.h  lk_vm.cpp  lk_vm.h
.github/workflows/: ci.yml
LK Cookbook/: discount_equal_wacc.lk  pv_sizing_variables.lk  tower_solarpilot.lk
attempt_using_lk_string/: lk_absyn.cpp  lk_absyn.h  lk_env.cpp  lk_env.h  lk_eval.cpp  lk_lex.cpp  lk_lex.h  lk_parse.cpp  lk_parse.h  lk_stdlib.cpp  lk_stdlib.h  lk_str.cpp  lk_str.h
build_linux/: Makefile
build_msvc/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lk.sln  lk.vcxproj  lk.vcxproj.filters  lk_sandbox.vcxproj  lk_sandbox.vcxproj.filters
build_osx/: Makefile
build_vc2013/: lkvc13wx3.sln  lkvc13wx3.vcxproj
build_vc2013/sandbox/: sandbox.cpp  sandbox.vcxproj
build_vc2013/test_thread/: Part10.cpp  Part8.cpp  Part8_vector.cpp  Part9.cpp  Part9_vector.cpp  Source.cpp  test_thread.vcxproj  test_thread.vcxproj.filters
build_vc2017/: lk_vc14.vcxproj
build_vc2017/sandbox/: sandbox.vcxproj
build_vs2013/: lkvc13wx3.sln  lkvc13wx3.vcxproj
build_vs2013/sandbox/: sandbox.cpp  sandbox.vcxproj
build_vs2017/: lk_vc14.sln  lk_vc14.vcxproj  sandbox.vcxproj
build_vs2017/sandbox/: sandbox.cpp  sandbox.vcxproj
cmdline/: Makefile  Makefile-osx-wx3-64  lkcmdline.cpp  test.lk  testdyn.lk  unicode.lk
core/: Makefile  lk_absyn.cpp  lk_absyn.h  lk_env.cpp  lk_env.h  lk_eval.cpp  lk_eval.h  lk_parse.cpp  lk_parse.h  lk_pretty.cpp  lk_pretty.h
db/: uuid
db/revprops/0/: 0
doc/: Doxyfile  Makefile  lk_guide.tex  lk_math.tex  lk_str.tex  lk_sys.tex  make_stdlib_docs.cpp
doc/html/: absyn_8h_source.html  annotated.html  annotated_dup.js  classes.html  classlk_1_1codegen-members.html  classlk_1_1codegen.html  classlk_1_1codegen.js  classlk_1_1doc__t-members.html  classlk_1_1doc__t.html  classlk_1_1doc__t.js  classlk_1_1env__t-members.html  classlk_1_1env__t.html  classlk_1_1env__t.js  classlk_1_1input__base-members.html  classlk_1_1input__base.html  classlk_1_1input__base.js  classlk_1_1invoke__t-members.html  classlk_1_1invoke__t.html  classlk_1_1invoke__t.js  classlk_1_1lexer-members.html  classlk_1_1lexer.html  classlk_1_1lexer.js  classlk_1_1node__t-members.html  classlk_1_1node__t.html  classlk_1_1node__t.js  classlk_1_1parser-members.html  classlk_1_1parser.html  classlk_1_1parser.js  classlk_1_1srcpos__t-members.html  classlk_1_1srcpos__t.html  classlk_1_1srcpos__t.js  classlk_1_1vardata__t-members.html  classlk_1_1vardata__t.html  classlk_1_1vardata__t.js  codegen_8h_source.html  dir_2ca08e99d1997f2b11c267702b357c4a.html  dir_2ca08e99d1997f2b11c267702b357c4a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+29 more)
doc/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
docs/: lk_guide.tex  lk_math.tex  lk_sys.tex  make_stdlib_docs.cpp
extensions/: Makefile  externtest.c
frees/: frees.cpp  frees.sln  frees.vcxproj  lu.h
include/lk/: absyn.h  codegen.h  env.h  eval.h  invoke.h  lex.h  mtrand.h  parse.h  sqlite3.h  stdlib.h  vm.h
lang/: lk.pot  readme.txt
lang/fr/: fr.po
linux_wx3_unicode/: Makefile
lk_test/: Info-lk_test.plist  Makefile-lk_test  fib.c  fib.lua  lk_test.cpp  lk_test_vc2013.vcxproj  prime.c  prime.lua  sqlite3test.lk  test-code.lk
mac_build/: Makefile
mingw_build/: Makefile
osx_wx28_ansi/: Makefile
osx_wx3_unicode/: Makefile
qt_build/: lk.pro
sandbox/: sandbox.cpp
src/: absyn.cpp  codegen.cpp  env.cpp  eval.cpp  invoke.cpp  lex.cpp  parse.cpp  stdlib-stack_corruption.cpp  stdlib.cpp  vm.cpp
testui/: bessj0.c  jacobian.h  lksolve.cpp  lkui.cpp  lkui.h  lkui.sln  lkui.vcxproj  newton.h  search.h
testui/deploy/: import1.txt  import2.txt  lkCode.txt  solver.txt
ui/: lkui.cpp  lkui.h  lkui.vcxproj
ui/deploy/: lkCode.txt
unix_build/: Makefile  Makefile-test
vc2010_wx28_ansi/: lk.sln  lk.vcxproj
vc2012_wx28_ansi/: lk.sln  lk.vcxproj
vc2012_wx3/: lkdev.cpp  lkwx3lib.sln  lkwx3lib.vcxproj
vc2012_wx3_unicode/: lkdev.cpp  lkdev.vcxproj  lkwx3lib.sln  lkwx3lib.vcxproj  lkwx3lib.vcxproj.filters  pcgen_test.lk
vc2013_wx28/: lk.sln  lk.vcxproj
vc2013_wx3/: lkvc13wx3.sln  lkvc13wx3.vcxproj
vc2013_wx3/sandbox/: sandbox.vcxproj
vc_build/: lk.vcxproj
wxosx_static/: Makefile
